@@ -1843,6 +1843,8 @@ void CAppSettings::ParseCommandLine(CAtlList<CString>& cmdln)
 				}
 			} else if (sw == _T("debug")) {
 				fShowDebugInfo = true;
+			} else if (sw == _T("nominidump")) {
+				CMiniDump::Disable();
 			} else if (sw == _T("audiorenderer") && pos) {
 				SetAudioRenderer(_ttoi(cmdln.GetNext(pos)));
 			} else if (sw == _T("reset")) {
